# agentmesh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
docs/superpowers/plans/: 2026-06-17-tasks-12-13.md
examples/: 01_hello_mesh.py  02_consumer_groups.py  03_human_in_the_loop.py  04_replay.py  05_multi_agent_workflow.py
scripts/: bump-version.sh  regression.sh  release.sh
src/agentmesh/: __init__.py  dedup.py  dlq.py  event.py  filter.py  mesh.py  otel.py  router.py  topic.py
src/agentmesh/integrations/: __init__.py  agenthooks.py  agentplane.py
src/agentmesh/store/: __init__.py  _base.py  jsonl.py
src/agentmesh/transport/: __init__.py  _base.py  inprocess.py
tests/: conftest.py  test_dedup.py  test_dlq.py  test_event.py  test_filter.py  test_mesh.py  test_router.py  test_store.py
