[project]
name = "agentmesh-bus"
version = "0.1.0"
description = "Agent-native event bus — connect agents, humans, and systems via typed events"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Naveen Kumar Baskaran" }]
keywords = ["agents", "events", "pubsub", "mesh", "kafka", "enterprise", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage   = "https://github.com/naveenkumarbaskaran/agentmesh"
Repository = "https://github.com/naveenkumarbaskaran/agentmesh"
Issues     = "https://github.com/naveenkumarbaskaran/agentmesh/issues"

[project.optional-dependencies]
redis   = ["redis>=5.0"]
nats    = ["nats-py>=2.0"]
kafka   = ["aiokafka>=0.10"]
sqlite  = ["aiosqlite>=0.20"]
otel    = ["opentelemetry-api>=1.20"]
all     = ["agentmesh-py[redis,nats,kafka,sqlite,otel]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
check_untyped_defs    = true
warn_unused_ignores   = false
